third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_missing_resource.exp

Diagnostics:
error: invalid call of `move_to`: argument count mismatch (expected 2 but found 1)
  ┌─ tests/checking/typing/v1-signer/move_to_missing_resource.move:4:9
  │
4 │         move_to<R>(s)
  │         ^^^^^^^^^^^^^

error: invalid call of `move_to`: argument count mismatch (expected 2 but found 1)
   ┌─ tests/checking/typing/v1-signer/move_to_missing_resource.move:14:14
   │
14 │         () = move_to<R<bool>>(s);
   │              ^^^^^^^^^^^^^^^^^^^
